# OptiTask

./: .gitignore  CONTRIBUTING.md  README.md  next.config.ts  package.json  pnpm-lock.yaml
backend-api/: Cargo.toml
backend-api/src/: auth_utils.rs  db.rs  error_handler.rs  main.rs  models.rs  project_handlers.rs  schema.rs
backend-api/src/handlers/: analytics_handlers.rs  label_handlers.rs  mod.rs  project_handlers.rs  task_handlers.rs  task_label_handlers.rs  time_entry_handlers.rs
src/: middleware.ts  next-auth.d.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/api/auth/[...nextauth]/: route.ts
src/app/api/calendar/google/: route.ts
src/app/signin/: page.tsx
src/components/: AuthProvider.tsx
src/components/analytics/: AnalyticsView.tsx  DateRangePicker.tsx
src/components/calendar/: CalendarView.tsx
src/components/labels/: AddLabelForm.tsx  EditLabelForm.tsx  LabelChip.tsx  LabelManager.tsx
src/components/projects/: AddProjectForm.tsx  EditProjectForm.tsx  ProjectList.tsx  ProjectsView.tsx
src/components/tasks/: AddTaskForm.tsx  EditTaskForm.tsx  TaskCard.tsx  TaskList.tsx
src/components/timer/: TaskSelector.tsx  TimeEntriesList.tsx  Timer.tsx  TimerControls.tsx  TimerDisplay.tsx
src/components/ui/: Button.tsx  Icons.tsx  Modal.tsx  color-picker.tsx  icons.tsx  modal.tsx
src/lib/: apiClient.ts  supabaseClient.ts
src/services/: analyticsApi.ts  calendarApi.ts  common.ts  labelApi.ts  projectApi.ts  taskApi.ts  taskLabelApi.ts  timeEntryApi.ts  types.ts
src/utils/: colors.ts  notifications.ts
