[package]
name = "backend-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] } # Pour la sérialisation/désérialisation JSON
tokio = { version = "1", features = ["macros", "rt-multi-thread"] } # Pour l'async
dotenvy = "0.15" # Pour charger les variables d'environnement
sqlx = { version = "0.7", features = [ "runtime-tokio-rustls", "postgres", "uuid", "chrono" ] } # Pour interagir avec PostgreSQL
